data/derived/comb/progs/unify/prog8588.ml.out
Characters 582-586:
  | NatLog   nlog		    -> "ln("^nlog^")";;
                                ^^^^
Error: This expression has type expr but an expression was expected of type
         string
